Implemented JobsListener for worker + refactoring

--- a/src/SortAsc.Worker.Service/appsettings.json
+++ b/src/SortAsc.Worker.Service/appsettings.json
@@ -1,10 +1,71 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug ",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NLog": {
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "targets": {
+      "coloredConsole": {
+        "type": "ColoredConsole",
+        "layout": "${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${logger}. ${message}. ${ndlc} ${exception:format=tostring,data}",
+        "rowHighlightingRules": [
+          {
+            "condition": "level == LogLevel.Debug",
+            "foregroundColor": "DarkGray"
+          },
+          {
+            "condition": "level == LogLevel.Info",
+            "foregroundColor": "Gray"
+          },
+          {
+            "condition": "level == LogLevel.Warn",
+            "foregroundColor": "Yellow"
+          },
+          {
+            "condition": "level == LogLevel.Error",
+            "foregroundColor": "Red"
+          },
+          {
+            "condition": "level == LogLevel.Fatal",
+            "foregroundColor": "Red",
+            "backgroundColor": "White"
+          }
+        ]
+      },
+      "logfile": {
+        "type": "File",
+        "layout": "${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${logger}. ${message}. ${ndlc} ${exception:format=tostring,data}",
+        "filename": "logs/nlog-${shortdate}.log"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "coloredConsole"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logfile"
+      }
+    ]
+  },
+  "KafkaJobsQueueOptions": {
+    "BootstrapServers": "localhost:9092",
+    "SaslUsername": "",
+    "SaslPassword": "",
+    "TopicName": "sorting_asc"
+  },
+
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "Instance": "JobDescriptions"
+  }
 }
