--- a/src/SortingWebApi/appsettings.json
+++ b/src/SortingWebApi/appsettings.json
@@ -7,7 +7,56 @@
     }
   },
   "AllowedHosts": "*",
-
+  "NLog": {
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "targets": {
+      "coloredConsole": {
+        "type": "ColoredConsole",
+        "layout": "${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${logger}. ${message}. ${ndlc} ${exception:format=tostring,data}",
+        "rowHighlightingRules": [
+          {
+            "condition": "level == LogLevel.Debug",
+            "foregroundColor": "DarkGray"
+          },
+          {
+            "condition": "level == LogLevel.Info",
+            "foregroundColor": "Gray"
+          },
+          {
+            "condition": "level == LogLevel.Warn",
+            "foregroundColor": "Yellow"
+          },
+          {
+            "condition": "level == LogLevel.Error",
+            "foregroundColor": "Red"
+          },
+          {
+            "condition": "level == LogLevel.Fatal",
+            "foregroundColor": "Red",
+            "backgroundColor": "White"
+          }
+        ]
+      },
+      "logfile": {
+        "type": "File",
+        "layout": "${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${logger}. ${message}. ${ndlc} ${exception:format=tostring,data}",
+        "filename": "logs/nlog-${shortdate}.log"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "coloredConsole"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logfile"
+      }
+    ]
+  },
   "KafkaJobsQueueOptions": {
     "BootstrapServers": "localhost:9092",
     "SaslUsername": "",
@@ -16,6 +65,6 @@
 
   "Redis": {
     "ConnectionString": "localhost:6379",
-    "Instance":  "JobDescriptions" 
+    "Instance": "JobDescriptions"
   }
 }
