--- a/src/SortingWebApi/SortingWebApi.csproj
+++ b/src/SortingWebApi/SortingWebApi.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
       <PackageReference Include="Polly" Version="7.2.1" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
   </ItemGroup>
 
   <ItemGroup>
