--- a/src/SortAsc.Worker.Service.Integration.Tests/SortAsc.Worker.Service.Integration.Tests.csproj
+++ b/src/SortAsc.Worker.Service.Integration.Tests/SortAsc.Worker.Service.Integration.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.10" />
     <PackageReference Include="NUnit" Version="3.13.1" />
