--- a/src/SortingWebApi/SortingWebApi.csproj
+++ b/src/SortingWebApi/SortingWebApi.csproj
@@ -5,6 +5,7 @@
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <UserSecretsId>da87be63-729c-411c-9171-6637800aa0a6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
