--- a/src/SortingWebApi/appsettings.json
+++ b/src/SortingWebApi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -47,7 +47,7 @@
     "rules": [
       {
         "logger": "*",
-        "minLevel": "Info",
+        "minLevel": "Debug",
         "writeTo": "coloredConsole"
       },
       {
