Implemented docker compose with dedicated services in containers

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,9 +5,14 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
+      - KafkaJobsQueueOptions__BootstrapServers=kafka:9093
+      - Redis__ConnectionString=redis:6379
+    depends_on:
+      - "kafka"
+      - "redis"
     ports:
-      - "80"
-      - "443"
+      - "6020:80"
+      - "6021:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
@@ -15,10 +20,47 @@ services:
   sortingwebapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - KafkaJobsQueueOptions__BootstrapServers=kafka:9093
+      - Redis__ConnectionString=redis:6379
+    depends_on:
+      - "kafka"
+      - "redis"
     ports:
-      - "80"
-      - "443"
+      - "6010:80"
+      - "6011:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+
+
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    ports:
+      - '2181:2181'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: 'bitnami/kafka:latest'
+    ports:
+      - '9092:9092'
+      - '9093:9093'
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=CLIENT://:9093,EXTERNAL://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9093,EXTERNAL://localhost:9092
+      - KAFKA_INTER_BROKER_LISTENER_NAME=CLIENT
+    depends_on:
+      - "zookeeper"
+ 
+  redis:
+        image: redis:latest
+        ports:
+            - 6379:6379
+        volumes:
+            - ./Redis/redis.conf:/redis.conf
+        command: [ "redis-server", "/redis.conf" ]
