Implemented all Jobs status page

--- a/src/SortAsc.Worker.Service/appsettings.Development.json
+++ b/src/SortAsc.Worker.Service/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Debug",
       "Microsoft.Hosting.Lifetime": "Debug"
     }
+  },
+  "KafkaJobsQueueOptions": {
+    "BootstrapServers": "localhost:9092",
+    "SaslUsername": "",
+    "SaslPassword": "",
+    "TopicName": "sorting_asc"
+  },
+
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "Instance": "JobDescriptions"
   }
 }
