--- a/src/SortingWebApi/SortingWebApi.csproj
+++ b/src/SortingWebApi/SortingWebApi.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>da87be63-729c-411c-9171-6637800aa0a6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
