--- a/src/SortingWebApi/appsettings.Development.json
+++ b/src/SortingWebApi/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "KafkaJobsQueueOptions": {
-    "BootstrapServers": "localhost:9092",
+    "BootstrapServers": "localhost:9093",
     "SaslUsername": "",
     "SaslPassword": ""
   },
