--- a/src/SortingWebApi/appsettings.json
+++ b/src/SortingWebApi/appsettings.json
@@ -58,13 +58,13 @@
     ]
   },
   "KafkaJobsQueueOptions": {
-    "BootstrapServers": "localhost:9092",
+    "BootstrapServers": "kafka:9093",
     "SaslUsername": "",
     "SaslPassword": ""
   },
 
   "Redis": {
-    "ConnectionString": "localhost:6379",
+    "ConnectionString": "redis:6379",
     "Instance": "JobDescriptions"
   }
 }
