--- a/src/SortAsc.Worker.Service/SortAsc.Worker.Service.csproj
+++ b/src/SortAsc.Worker.Service/SortAsc.Worker.Service.csproj
@@ -1,17 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <Nullable>enable</Nullable>
-    <DockerfileContext>..\..</DockerfileContext>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp5.0</TargetFramework>
+        <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>da87be63-729c-411c-9171-6637800aa0a6</UserSecretsId>
+        <DockerfileContext>..\..</DockerfileContext>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CloudNative.CloudEvents.Kafka" Version="1.3.80" />
     <PackageReference Include="Confluent.Kafka" Version="1.6.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
   </ItemGroup>
